@@ -81,3 +81,4 @@ set_board_info noargs 1
 set_board_info gdb,nosignals 1
 set_board_info gdb,noresults 1
 set_board_info gdb,noinferiorio 1
+set_board_info needs_status_wrapper ""
